chore: Fix regression on #4588 - Scope trigger flex alignment to one-theme only (#4604)

--- a/src/button-dropdown/styles.scss
+++ b/src/button-dropdown/styles.scss
@@ -50,8 +50,10 @@ $dropdown-trigger-icon-offset: 2px;
 }
 
 .trigger-button {
-  display: flex;
-  align-items: center;
+  &.one-theme {
+    display: flex;
+    align-items: center;
+  }
   &.full-width {
     display: grid;
     grid-template-columns: 1fr auto;
